--- a/widgets/pomodoro/index.html
+++ b/widgets/pomodoro/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sliding Text</title>
+    <title>Pomodoro</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="../../assets/global.css">
 </head>
